# App-SpaM

./: .gitignore  CMakeLists.txt  README.md
include/: Algorithms.h  Bucket.h  BucketManager.h  GenomeManager.h  GlobalParameters.h  Match.h  MatchManager.h  Node.h  PairwiseDistances.h  Pattern.h  Placement.h  ReadManager.h  Scoring.h  Seed.h  SeqIO.h  Sequence.h  Tree.h  Word.h
src/: APPSPAM.cpp  Algorithms.cpp  Bucket.cpp  BucketManager.cpp  GenomeManager.cpp  GlobalParameters.cpp  Match.cpp  MatchManager.cpp  Node.cpp  PairwiseDistances.cpp  Pattern.cpp  Placement.cpp  ReadManager.cpp  Scoring.cpp  Seed.cpp  SeqIO.cpp  Sequence.cpp  SubstitutionMatrix.h  Tree.cpp  Word.cpp
